@@ -2,6 +2,8 @@
 
 	* configure.ac: Fix typo when substituting value for unsigned 8 bit type.
 	Added support for a TIFF_PTRDIFF_T type to use when doing pointer arithmetic.
+	Added support for a TIFF_SSIZE_T in order to return memory sizes but still
+	allow returning -1 for errors.
 	* libtiff/tiffconf.vc.h: Add porting type defintions for WIN32.
 
 2007-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
